--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/pink-e-in-white-circle.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elina's Runstreak Counter</title>
+    <title>Elinas Runstreak Counter</title>
   </head>
   <body>
     <div id="root"></div>
